[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main Menu/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Music/Mels_video_game_song.wav" type="AudioStream" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/joystix/joystix monospace.otf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/joystix/joystix monospace.otf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[node name="Title Screen" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
color = Color( 0.0509804, 0.0470588, 0.203922, 1 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = 52.0
margin_right = 128.5
margin_bottom = 163.0
custom_colors/font_color = Color( 0.788235, 0.776471, 0.776471, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
icon_align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -196.0
margin_right = 304.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
text = "Prison Break
Press Start to Play!"
align = 1
valign = 1

[node name="IntroGameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="finished" from="IntroGameMusic" to="." method="_on_IntroGameMusic_finished"]
